src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Planned_Expense_Less_Labor__c</fullName>
        <label>Planned Expense Less Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Directory_Categories__c</fullName>
        <label>Premium Directory Categories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Directory__c</fullName>
        <formula>CONTAINS(PricebookEntry.Product2.Name, &quot;(Premium)&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Edition__c</fullName>
        <label>Print Edition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Print_Section__c</fullName>
        <label>Print Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>CASE (   Product_Type__c  ,
&quot;White Paper (Sponsor Supplied)&quot;, &quot;Digital&quot;,
&quot;Webinar (Sponsor Supplied)&quot;, &quot;Digital&quot;,
&quot;Virtual Event&quot;, &quot;Digital&quot;,
&quot;Video (Sponsor Supplied)&quot;, &quot;Digital&quot;,
&quot;Stragetic Marketing Servi&quot;, &quot;Digital&quot;,
&quot;Roadblock&quot;, &quot;Digital&quot;,
&quot;Product Spotlight Blast&quot;, &quot;Digital&quot;,
&quot;Print&quot;, &quot;Print&quot;,
&quot;Newsletter&quot;, &quot;Digital&quot;,
&quot;HWTV (Sponsor Supplied)&quot;, &quot;Digital&quot;,
&quot;Email Promo Blast/Marketi&quot;, &quot;Digital&quot;,
&quot;Email List Blast&quot;, &quot;Digital&quot;,
&quot;Education&quot;, &quot;Digital&quot;,
&quot;Digital Edition&quot;, &quot;Digital&quot;,
&quot;Demand Generation&quot;, &quot;Digital&quot;,
&quot;Customer Engagement Progr&quot;, &quot;Digital&quot;,
&quot;Event Sponsorship&quot;, &quot;Event&quot;,
&quot;CPM&quot;,&quot;Digital&quot;,
&quot;Direct Mail List&quot;,&quot;Digital&quot;,
&quot;Digital Field Guide Subscription&quot;,&quot;Digital&quot;,
&quot;PSNDE&quot;,&quot;Digital&quot;,
&quot; &quot;
)</description>
        <formula>IF( 
CONTAINS(Product_Type__c, &quot;Metrostudy&quot;), &quot;Metrostudy&quot;,
IF(
AND(CONTAINS(Product_Type__c, &quot;Marketing&quot;),Product_Type__c &lt;&gt; &quot;Strategic Marketing Services&quot;) , &quot;Marketing&quot;,
IF( 
CONTAINS(Product_Type__c, &quot;Direct Mail List&quot;), &quot;Digital&quot;,  

CASE (   Product_Type__c  ,
&quot;White Paper (Sponsor Supplied)&quot;, &quot;Digital&quot;,
&quot;Webinar (Sponsor Supplied)&quot;, &quot;Digital&quot;,
&quot;Virtual Event&quot;, &quot;Digital&quot;,
&quot;Video (Sponsor Supplied)&quot;, &quot;Digital&quot;,
&quot;Strategic Marketing Services&quot;, &quot;Digital&quot;,
&quot;Roadblock&quot;, &quot;Digital&quot;,
&quot;Product Spotlight Blast&quot;, &quot;Digital&quot;,
&quot;Print&quot;, &quot;Print&quot;,
&quot;Newsletter&quot;, &quot;Digital&quot;,
&quot;newsletter&quot;, &quot;Digital&quot;,
&quot;HWTV (Sponsor Supplied)&quot;, &quot;Digital&quot;,
&quot;Email Promo Blast/Marketi&quot;, &quot;Digital&quot;,
&quot;Email List Blast&quot;, &quot;Digital&quot;,
&quot;Education&quot;, &quot;Digital&quot;,
&quot;Digital Edition&quot;, &quot;Digital&quot;,
&quot;Demand Generation&quot;, &quot;Digital&quot;,
&quot;Customer Engagement Progr&quot;, &quot;Digital&quot;,
&quot;Event Sponsorship&quot;, &quot;Event&quot;,
&quot;Branded Event&quot;, &quot;Event&quot;,
&quot;Custom Event&quot;, &quot;Event&quot;,
&quot;Event Sponsorship (Custom)&quot;, &quot;Event&quot;,
&quot;Education Event&quot;, &quot;Event&quot;,
&quot;CPM&quot;,&quot;Digital&quot;,
&quot;Standard CPM&quot;,&quot;Digital&quot;,
&quot;Building Know-How JLC&quot;,&quot;Digital&quot;,
&quot;Category Exclusive JLC&quot;,&quot;Digital&quot;,
&quot;Consumer Specials&quot;,&quot;Digital&quot;,
&quot;Dedicated Email&quot;,&quot;Digital&quot;,
&quot;Newsletter Plus&quot;,&quot;Digital&quot;,
&quot;Paid Promo Allocation&quot;,&quot;Digital&quot;,
&quot;Run of Network&quot;,&quot;Digital&quot;,
&quot;Targeted Sponsorship&quot;,&quot;Digital&quot;,
&quot;SMS&quot;,&quot;Digital&quot;,
&quot;Event&quot;,&quot;Event&quot;,
&quot;Exhibitions Intercompany&quot;,&quot;Exhibitions&quot;,
&quot;Direct Mail List&quot;,&quot;Digital&quot;,
&quot;Standard CPM&quot;,&quot;Digital&quot;,
&quot;Digital Field Guide Subscription&quot;,&quot;Digital&quot;,
&quot;Digital Subscription&quot;,&quot;Digital&quot;,
&quot;PSNDE&quot;,&quot;Digital&quot;,
&quot;Pool &amp; Spa News Digital&quot;,&quot;Digital&quot;,
&quot;Directory Listing&quot;,&quot;Digital&quot;,
&quot;Events - Tradeshow&quot;,&quot;Event&quot;,
&quot;Events - Branded&quot;,&quot;Event&quot;,
&quot;Events - Corporate&quot;,&quot;Event&quot;,
&quot;Back Copy Sales&quot;,&quot;Print&quot;,
&quot; &quot;
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>PricebookEntry.Product2.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Price_Summary__c</fullName>
        <formula>Billing_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Price Summary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Subcategory__c</fullName>
        <formula>IF(
CONTAINS(DSM_Product_Name__c, &quot;CEU&quot;), &quot;Education&quot;, 

IF(
CONTAINS (DSM_Product_Name__c, &quot;Profile Nurturing&quot;), &quot;Demand Generation&quot;,

IF(
CONTAINS (DSM_Product_Name__c, &quot;SMS Demand Generation&quot;), &quot;Demand Generation&quot;,


IF( 
CONTAINS(Product_Type__c, &quot;Metrostudy&quot;), &quot;Metrostudy&quot;, 
IF(
AND(CONTAINS(Product_Type__c, &quot;Marketing&quot;),Product_Type__c &lt;&gt; &quot;Strategic Marketing Services&quot;) , &quot;Marketing&quot;, 
IF( 
CONTAINS(Product_Type__c, &quot;Direct Mail List&quot;), &quot;Impressions/Branding&quot;,

CASE ( Product_Type__c , 
&quot;White Paper (Sponsor Supplied)&quot;,&quot;Impressions/Branding&quot;, 
&quot;Webinar (Sponsor Supplied)&quot;,&quot;Impressions/Branding&quot;, 
&quot;Virtual Event&quot;,&quot;Demand Generation&quot;, 
&quot;Video (Sponsor Supplied)&quot;,&quot;Impressions/Branding&quot;,
&quot;Run of Network&quot;,&quot;Impressions/Branding&quot;, 
&quot;Stragetic Marketing Servi&quot;,&quot;SMS&quot;, 
&quot;Strategic Marketing Services&quot;,&quot;SMS&quot;, 
&quot;Roadblock&quot;,&quot;Impressions/Branding&quot;, 
&quot;Product Spotlight Blast&quot;,&quot;Impressions/Branding&quot;, 
&quot;Print&quot;,&quot;Print&quot;, 
&quot;Newsletter&quot;,&quot;Impressions/Branding&quot;, 
&quot;newsletter&quot;,&quot;Impressions/Branding&quot;, 
&quot;HWTV (Sponsor Supplied)&quot;,&quot;Impressions/Branding&quot;, 
&quot;Email Promo Blast/Marketi&quot;,&quot;Impressions/Branding&quot;, 
&quot;Email List Blast&quot;,&quot;Impressions/Branding&quot;, 
&quot;Education&quot;,&quot;Demand Generation&quot;, 
&quot;Digital Edition&quot;,&quot;Impressions/Branding&quot;, 
&quot;Customer Engagement Progr&quot;,&quot;Demand Generation&quot;, 
&quot;Demand Generation&quot;,&quot;Demand Generation&quot;,
&quot;CPM&quot;, &quot;Impressions/Branding&quot;, 
&quot;Standard CPM&quot;, &quot;Impressions/Branding&quot;,
&quot;Consumer Specials&quot;,&quot;Impressions/Branding&quot;, 
&quot;Branded Event&quot;,&quot;Events&quot;,
&quot;Custom Event&quot;,&quot;Events&quot;,
&quot;Event Sponsorship (Custom)&quot;,&quot;Events&quot;,
&quot;Education Event&quot;,&quot;Events&quot;,
&quot;Event Sponsorship&quot;,&quot;Events&quot;,
&quot;Event Sponsorship (Custom)&quot;,&quot;Events&quot;,
&quot;Exhibitions Intercompany&quot;, &quot;Exhibitions&quot;,
&quot;Paid Promo Allocation&quot;, &quot;Impressions/Branding&quot;,
&quot;Direct Mail List&quot;, &quot;Impressions/Branding&quot;,
&quot;Standard CPM&quot;, &quot;Impressions/Branding&quot;,
&quot;Digital Subscription&quot;, &quot;Impressions/Branding&quot;,
&quot;Directory Listing&quot;, &quot;Impressions/Branding&quot;,
&quot;Events - Tradeshow&quot;,&quot;Events&quot;,
&quot;Events - Branded&quot;,&quot;Events&quot;,
&quot;Events - Corporate&quot;,&quot;Events&quot;,
&quot;Back Copy Sales&quot;,&quot;Print&quot;,
&quot; &quot; 
) 
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Subcategory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Units_Purchased__c</fullName>
        <formula>Units_Purchased__c &lt;&gt;  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity &lt;&gt; Units Purchased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Category__c</fullName>
        <formula>Opportunity.Revenue_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ParentID__c</fullName>
        <inlineHelpText>ID of the opportunity product that came from this product&apos;s bundle.</inlineHelpText>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this Opportunity Product.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOW_Days__c</fullName>
        <formula>DATEVALUE(HW_Line_Item_End_Date__c) -  DATEVALUE(HW_Line_Item_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOW Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOW_Term2__c</fullName>
        <formula>DSM_Product_Lookup__r.SOW_Term__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOW Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Mirror__c</fullName>
        <formula>UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Price Mirror</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <formula>TEXT(UnitPrice)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription</fullName>
                    <default>true</default>
                    <label>Subscription</label>
                </value>
                <value>
                    <fullName>One-Time Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_to_WF_Project__c</fullName>
        <formula>(DSM_Prod_WF_Template_ID__c &lt;&gt; &apos;&apos; &amp;&amp;
WF_Project_ID__c = null &amp;&amp;  
HW_Line_Item_Id__c  &lt;&gt; &apos;&apos; &amp;&amp; 
Opportunity.WF_Portfolio_ID__c &lt;&gt; null)</formula>
        <label>Initial Sync to WF Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Price_AB_Working_Price__c</fullName>
        <formula>AB2__CPM_Cost_per_1000__c  &lt;&gt;  TotalPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price &lt;&gt; AB Working Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>TEXT(TotalPrice)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units_Purchased__c</fullName>
        <description>Units_Purchased__c</description>
        <inlineHelpText>Units_Purchased__c</inlineHelpText>
        <label>Units Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Sync_to_WF_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Sync to WF Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WF_Account_Name__c</fullName>
        <description>For Work front use</description>
        <formula>Opportunity.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_Company_Id__c</fullName>
        <formula>Opportunity.Account.WF_Company_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WF Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_Company_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://hanleywood.my.workfront.com/company/view?ID=&quot; +  WF_Company_Id__c , &quot;WF Company&quot;,&quot;_blank&quot;)</formula>
        <label>WF Company Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_Portfolio_ID_Text__c</fullName>
        <label>WF Portfolio ID Text</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_Portfolio_ID__c</fullName>
        <formula>IF(WF_Portfolio_ID_Text__c &lt;&gt; &quot;&quot;, WF_Portfolio_ID_Text__c, Opportunity.WF_Portfolio_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WF Portfolio ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_Portfolio_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://hanleywood.my.workfront.com/portfolio/view?ID=&quot; +  Opportunity.WF_Portfolio_ID__c   , &quot;WF Portfolio&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WF Portfolio Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WF Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_Project_ID__c</fullName>
        <label>WF Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_Project_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://hanleywood.my.workfront.com/project/view?ID=&quot; +  WF_Project_ID__c   , &quot;WF Project&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WF Project Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_Project_Name__c</fullName>
        <description>This field is used to control the project name in WF</description>
        <formula>IF(ISBLANK( DSM_Product_Name__c ),

  IF( !ISBLANK(Legacy_DSM_ID_Line_Item__c),
  Legacy_DSM_ID_Line_Item__c &amp; &quot; &quot; &amp; PricebookEntry.Product2.Name  &amp; &quot; - &quot; &amp; WF_Account_Name__c,
  HW_Line_Item_Id__c &amp; &quot; &quot; &amp; PricebookEntry.Product2.Name &amp; &quot; - &quot; &amp; WF_Account_Name__c)
,
  IF( !ISBLANK(Legacy_DSM_ID_Line_Item__c),
  Legacy_DSM_ID_Line_Item__c &amp; &quot; &quot; &amp; DSM_Product_Name__c &amp; &quot; - &quot; &amp; WF_Account_Name__c,
  HW_Line_Item_Id__c &amp; &quot; &quot; &amp; DSM_Product_Name__c &amp; &quot; - &quot; &amp; WF_Account_Name__c)
)</formula>
        <label>WF Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_Trigger_Time_01__c</fullName>
        <description>used in WF to fire time dependent WF after 1 minutes</description>
        <formula>Now()  -  0.04097222</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WF Trigger Time 01</label>
        <type>DateTime</type>
    </fields>
    <validationRules>
        <fullName>Enforce_End_Date_Range</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
Opportunity.RecordTypeId = &quot;01280000000BiIi&quot;,

OR (
HW_Line_Item_End_Date__c  &lt; Opportunity.HW_Start_Date__c ,
HW_Line_Item_End_Date__c &gt;  Opportunity.HW_End_Date__c 
)
)</errorConditionFormula>
        <errorMessage>The Line Item End Date must be within the Start and End Date on the Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_Start_Date_Range</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
Opportunity.RecordTypeId = &quot;01280000000BiIi&quot;,

OR (
HW_Line_Item_Start_Date__c &lt; Opportunity.HW_Start_Date__c ,
HW_Line_Item_Start_Date__c &gt;  Opportunity.HW_End_Date__c 
)
)</errorConditionFormula>
        <errorMessage>The Line Item Start Date must be within the Start and End Date on the Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Percent_Discount</fullName>
        <active>false</active>
        <description>Rep can only discount a product 10%, if more than 10%, Rep cannot save the product</description>
        <errorConditionFormula>UnitPrice &gt;0.10</errorConditionFormula>
        <errorMessage>Product discount cannot exceed 10%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Products_on_Media_Opps</fullName>
        <active>false</active>
        <errorConditionFormula>AND (OR(
Opportunity.RecordTypeId = &quot;01280000000BhaG&quot;,
Opportunity.RecordTypeId = &quot;01280000000BiIi&quot;),
NOT (ISBLANK ( Line_Item_ID__c )),
NOT ( $User.ProfileId =&quot;00e80000000tVFl&quot;),
OR (
ISCHANGED (  OpportunityId  ),
ISCHANGED (  Account_Name__c ),
ISCHANGED (  Product2Id ),
ISCHANGED (  Product_Description__c ),
ISCHANGED (  ListPrice ),
ISCHANGED (  Product_Type__c ),
ISCHANGED (  ServiceDate ),
ISCHANGED (   Ad_ID__c ),
ISCHANGED (  AdName_Comments__c ),
ISCHANGED (  Adv_Rate__c ),
ISCHANGED (  Adv_Rate_Base__c ),
ISCHANGED (  Cost__c ),
ISCHANGED (  Cost_Base__c ),
ISCHANGED (  Custom_ProdType__c ),
ISCHANGED (  GDFP_Ad_ID__c ),
ISCHANGED (  GDFP_LI_Comments__c ),
ISCHANGED (  GDFP_Size__c ),
ISCHANGED (  DSM_ProdID__c ),
ISCHANGED (  DSM_ProdName__c ),
ISCHANGED (  is_flat_fee__c ),
ISCHANGED (  LI_StartDate__c ),
ISCHANGED (  LI_EndDate__c ),
ISCHANGED (  Line_Item_ID__c ),
ISCHANGED (  Net_Cost__c ),
ISCHANGED (  Net_Cost_Base__c ),
ISCHANGED (  Rate_Method__c ),
ISCHANGED (  Sitename__c ),
ISCHANGED (  Sitename__c ),
ISCHANGED (  DFP_Sitename__c ),
ISCHANGED (  Size__c ),
ISCHANGED (  Units_Delivered__c ),
ISCHANGED (  Units_Purchased__c ),
ISCHANGED (  Description )



)


)</errorConditionFormula>
        <errorMessage>Line items can only be edited in DSM.</errorMessage>
    </validationRules>
</CustomObject>